--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,4 +1,4 @@
-<h1>Create Product</h1>
+<h1>Crear Producto</h1>
 
 <main>
 
@@ -12,8 +12,8 @@
 		<label for='price'>Price</label>
 		<input type='number' name='price' required />
 
-		<label for='thumbnail'>Status</label>
-		<input type='text' name='thumbnail' required />
+		<label for='status'>Status</label>
+		<input type='text' name='status' required />
 
 		<label for='code'>Code</label>
 		<input type='text' name='code' required />
