--- a/src/public/css/realTimeProducts.css
+++ b/src/public/css/realTimeProducts.css
@@ -1,4 +1,4 @@
-main {
+/* main {
 	display: flex;
 	justify-content: center;
 	gap: 40px;
@@ -27,10 +27,10 @@ form button {
 	margin: 20px auto;
 	width: 150px;
 	height: 40px;
-}
+} */
 
-.product-container {
+/* .product-container {
 	width: 400px;
 	margin-bottom: 8px;
 	border-bottom: 1px solid black;
-}
+} */
