--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -2,12 +2,14 @@
 	<head>
 		<meta charset='UTF-8' />
 		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
-		<title>Document</title>
+		<title>Server Nodejs</title>
     <link rel="stylesheet" href="./css/{{rutaCSS}}.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.23/dist/sweetalert2.min.css">
+		
+
 
 	</head>
-	<body>
+	<body class="">
     {{>nav}}
 		{{{body}}}
 		{{! esto es lo que se va a modificar con mis plantilas, va a ir cambiando de acuerdo a qué plantilla quiera mostrar en el body }}
@@ -19,5 +21,6 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.23/dist/sweetalert2.all.min.js"></script>
     <script src="js/{{rutaJS}}.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     </body>
 </html>
