--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -1,8 +1,32 @@
-<nav style='margin: 0; padding: 0'>
+{{!-- <nav style='margin: 0; padding: 0'>
 	<ul style='margin: 8px; padding: 0; display: flex; gap: 20px; list-style: none'>
 		<li><a href='http://localhost:8080/static/'>Home</a></li>
 		<li><a href='http://localhost:8080/static/realtimeproducts'>Crear producto</a></li>
 	</ul>
-</nav>
+</nav> --}}
 
 {{! en partials se crean los elementos o partes que se repiten en todas las vistas }}
+
+
+<nav class="bg-neutral-200 text-center dark:bg-slate-700 lg:text-left">
+	
+		<ul class="flex justify-start">
+		<li>
+			<div class="text-white pr-10">
+				<a href='http://localhost:8080/static/' 
+					class="" aria-current="page">
+					Home
+				</a>
+			</div>
+		</li>
+		<li>
+			<div class="text-white">
+				<a href='http://localhost:8080/static/realtimeproducts' 
+					class="">
+					Crear producto
+				</a>
+			</div>
+		</li>
+		</ul>
+
+</nav>
