--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -8,21 +8,19 @@
 {{! en partials se crean los elementos o partes que se repiten en todas las vistas }}
 
 
-<nav class="bg-neutral-200 text-center dark:bg-slate-700 lg:text-left">
+<nav class="bg-neutral-200 text-center dark:bg-slate-700 lg:text-left p-4">
 	
 		<ul class="flex justify-start">
 		<li>
 			<div class="text-white pr-10">
-				<a href='http://localhost:8080/static/' 
-					class="" aria-current="page">
+				<a href='http://localhost:8080/static/'>
 					Home
 				</a>
 			</div>
 		</li>
 		<li>
 			<div class="text-white">
-				<a href='http://localhost:8080/static/realtimeproducts' 
-					class="">
+				<a href='http://localhost:8080/static/realtimeproducts'>
 					Crear producto
 				</a>
 			</div>
