--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -13,15 +13,22 @@
 		<ul class="flex justify-start">
 		<li>
 			<div class="text-white pr-10">
-				<a href='http://localhost:8080/static/'>
+				<a href='http://localhost:4000/static/'>
 					Home
 				</a>
 			</div>
 		</li>
 		<li>
 			<div class="text-white">
-				<a href='http://localhost:8080/static/realtimeproducts'>
+				<a href='http://localhost:4000/static/realtimeproducts'>
 					Crear producto
+				</a>
+			</div>
+		</li>
+		<li>
+			<div class="text-white">
+				<a href='http://localhost:4000/api/product'>
+					Lista Productos
 				</a>
 			</div>
 		</li>
