--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -26,11 +26,11 @@
 				type='number' name='price' required />
 		</div>
 		<div class="mb-4">
-			<label class="block text-gray-700 text-sm font-bold mb-2" for='status'>
-				Status</label>
+			<label class="block text-gray-700 text-sm font-bold mb-2" for='thumbnail'>
+				Thumbnail</label>
 			<input
 				class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-				type='text' name='status' required />
+				type='text' name='thumbnail' required />
 		</div>
 		<div class="mb-4">
 			<label class="block text-gray-700 text-sm font-bold mb-2" for='code'>
