--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -27,7 +27,7 @@
 		</li>
 		<li>
 			<div class="text-white">
-				<a href='http://localhost:4000/api/product'>
+				<a href='http://localhost:4000/productsList'>
 					Lista Productos
 				</a>
 			</div>
