--- a/src/public/css/realTimeProducts.css
+++ b/src/public/css/realTimeProducts.css
@@ -29,8 +29,8 @@ form button {
 	height: 40px;
 } */
 
-/* .product-container {
+.product-container {
 	width: 400px;
 	margin-bottom: 8px;
 	border-bottom: 1px solid black;
-} */
+}
