--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -1,37 +1,16 @@
-{{!-- <nav style='margin: 0; padding: 0'>
-	<ul style='margin: 8px; padding: 0; display: flex; gap: 20px; list-style: none'>
-		<li><a href='http://localhost:8080/static/'>Home</a></li>
-		<li><a href='http://localhost:8080/static/realtimeproducts'>Crear producto</a></li>
-	</ul>
-</nav> --}}
-
-{{! en partials se crean los elementos o partes que se repiten en todas las vistas }}
-
-
-<nav class="bg-neutral-200 text-center dark:bg-slate-700 lg:text-left p-4">
-	
-		<ul class="flex justify-start">
-		<li>
-			<div class="text-white pr-10">
-				<a href='http://localhost:4000/static/'>
-					Home
-				</a>
-			</div>
-		</li>
-		<li>
-			<div class="text-white">
-				<a href='http://localhost:4000/static/realtimeproducts'>
-					Crear producto
-				</a>
-			</div>
-		</li>
-		<li>
-			<div class="text-white">
-				<a href='http://localhost:4000/productsList'>
-					Lista Productos
-				</a>
-			</div>
-		</li>
-		</ul>
-
+<nav class="bg-blue-500 p-4">
+    <div class="container mx-auto flex justify-between items-center">
+        <a href="/" class="text-white text-2xl font-bold">Backend</a>
+        <ul class="flex space-x-6">
+            <li>
+                <a href="http://localhost:4000/static/" class="text-white hover:text-blue-200">Inicio</a>
+            </li>
+            <li>
+                <a href="http://localhost:4000/static/realtimeproducts" class="text-white hover:text-blue-200">Crear Productos</a>
+            </li>
+            <li>
+                <a href="http://localhost:4000/productsList" class="text-white hover:text-blue-200">Lista Productos</a>
+            </li>
+        </ul>
+    </div>
 </nav>
