--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,60 +1,49 @@
-<div class="">
+<h1 class="text-3xl font-bold text-gray-800 mb-6">Crear Producto</h1>
+<main class="flex justify-center items-center h-screen">
+    <form id="formProduct" class="bg-white rounded-lg p-8 w-full max-w-md shadow-lg">
+        <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="title">Título</label>
+            <input
+                class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:ring focus:border-blue-500"
+                type="text" name="title" required />
+        </div>
+        <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="description">Descripción</label>
+            <input
+                class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:ring focus:border-blue-500"
+                type="text" name="description" required />
+        </div>
+        <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="price">Precio</label>
+            <input
+                class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:ring focus:border-blue-500"
+                type="number" name="price" required />
+        </div>
+        <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="thumbnail">Miniatura</label>
+            <input
+                class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:ring focus:border-blue-500"
+                type="text" name="thumbnail" required />
+        </div>
+        <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="code">Código</label>
+            <input
+                class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:ring focus:border-blue-500"
+                type="text" name="code" required />
+        </div>
+        <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="stock">Stock</label>
+            <input
+                class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:ring focus:border-blue-500"
+                type="number" name="stock" required />
+        </div>
 
-<h1>Crear Producto</h1>
-<main>
-	<form id='formProduct' class="bg-white rounded px-8 pt-6 pb-8 mb-4 w-4/12 shadow-2xl">
-		<div class="mb-4">
-			<label class="block text-gray-700 text-sm font-bold mb-2" for='title'>
-				Title
-			</label>
-			<input
-				class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-				type='text' name='title' required />
-		</div>
-		<div class="mb-4">
-			<label class="block text-gray-700 text-sm font-bold mb-2" for='description'>
-				Description</label>
-			<input
-				class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-				type='text' name='description' required />
-		</div>
-		<div class="mb-4">
-			<label class="block text-gray-700 text-sm font-bold mb-2" for='price'>
-				Price</label>
-			<input
-				class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-				type='number' name='price' required />
-		</div>
-		<div class="mb-4">
-			<label class="block text-gray-700 text-sm font-bold mb-2" for='thumbnail'>
-				Thumbnail</label>
-			<input
-				class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-				type='text' name='thumbnail' required />
-		</div>
-		<div class="mb-4">
-			<label class="block text-gray-700 text-sm font-bold mb-2" for='code'>
-				Code</label>
-			<input
-				class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-				type='text' name='code' required />
-		</div>
-		<div class="mb-4">
-			<label class="block text-gray-700 text-sm font-bold mb-2" for='stock'>
-				Stock</label>
-			<input
-				class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-				type='number' name='stock' required />
-		</div>
-
-		<div class="flex items-center justify-between">
-			<button
-				class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-				type='submit'>
-				Crear Producto
-			</button>
-		</div>
-	</form>
-	<div id='products-container'></div>
+        <div class="flex justify-center">
+            <button
+                class="bg-blue-500 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg focus:outline-none focus:ring focus:border-blue-500"
+                type="submit">
+                Crear Producto
+            </button>
+        </div>
+    </form>
 </main>
-</div>
