--- a/src/public/css/realTimeProducts.css
+++ b/src/public/css/realTimeProducts.css
@@ -1,36 +1,36 @@
-/* main {
-	display: flex;
-	justify-content: center;
-	gap: 40px;
-	width: 100vw;
+body {
+    margin: 0;
 }
 
 h1 {
-	text-align: center;
-	margin-bottom: 20px;
+    text-align: center;
 }
 
 form {
-	display: flex;
-	flex-direction: column;
-	width: 400px;
-	height: 400px;
-	padding: 20px 20px 0 20px;
-	border: 1px solid black;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-form input {
-	margin: 4px 0;
+label,
+input {
+    display: block;
+    margin-bottom: 10px;
 }
 
-form button {
-	margin: 20px auto;
-	width: 150px;
-	height: 40px;
-} */
+input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+}
 
-.product-container {
-	width: 400px;
-	margin-bottom: 8px;
-	border-bottom: 1px solid black;
+button {
+    background-color: cadetblue;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
 }
