--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,9 +1,9 @@
-<html lang='en'>{{!  ARCHIVO BASE }}
+<html lang='es'>{{!  ARCHIVO BASE }}
 	<head>
 		<meta charset='UTF-8' />
 		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 		<title>Server Nodejs</title>
-
+    <link rel="stylesheet" href="css/{{rutaCSS}}.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.23/dist/sweetalert2.min.css">
 		
 
@@ -22,5 +22,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.23/dist/sweetalert2.all.min.js"></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="js/{{rutaJS}}.js"></script>
+
+
+
     </body>
 </html>
