--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -3,10 +3,10 @@
         <a href="/" class="text-white text-2xl font-bold">Backend</a>
         <ul class="flex space-x-6">
             <li>
-                <a href="http://localhost:4000/static/" class="text-white hover:text-blue-200">Inicio</a>
+                <a href="http://localhost:4000/" class="text-white hover:text-blue-200">Inicio</a>
             </li>
             <li>
-                <a href="http://localhost:4000/static/realtimeproducts" class="text-white hover:text-blue-200">Crear Productos</a>
+                <a href="http://localhost:4000/static/" class="text-white hover:text-blue-200">Crear Productos</a>
             </li>
             <li>
                 <a href="http://localhost:4000/productsList" class="text-white hover:text-blue-200">Lista Productos</a>
