--- a/src/views/productsList.handlebars
+++ b/src/views/productsList.handlebars
@@ -1,6 +1,44 @@
+    <h1 class="text-3xl font-bold text-gray-800 mb-6">Productos</h1>
+    <table class"datagrid">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Price</th>
+                <th>Thumbnail</th>
+                <th>Code</th>
+                <th>Stock</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each products}}
+            <tr>
+                <td>{{title}}</td>
+                <td>{{description}}</td>
+                <td>{{price}}</td>
+                <td>{{thumbnail}}</td>
+                <td>{{code}}</td>
+                <td>{{stock}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
 
+
+
+
+
+
+{{!-- <!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="/src/public/css/productsList.css">
+</head>
+
+<body>
     <h1>Lista de Productos</h1>
-    <div id="products">
+    <div id="">
         <table class="min-w-full bg-white border border-gray-300">
             <thead>
                 <tr class="bg-gray-100">
@@ -28,4 +66,6 @@
             </tbody>
         </table>
     </div>
+</body>
 
+</html> --}}
