--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -1,15 +1,27 @@
-<nav class="bg-blue-500 p-4">
+<nav class="bg-slate-800 p-4">
     <div class="container mx-auto flex justify-between items-center">
         <a href="/" class="text-white text-2xl font-bold">Backend</a>
         <ul class="flex space-x-6">
             <li>
-                <a href="http://localhost:4000/" class="text-white hover:text-blue-200">Inicio</a>
+                <a href="http://localhost:4000/static" class="text-white hover:text-blue-200">Inicio</a>
             </li>
             <li>
-                <a href="http://localhost:4000/static/" class="text-white hover:text-blue-200">Crear Productos</a>
+                <a href="http://localhost:4000/static/realtimeproducts" class="text-white hover:text-blue-200">Crear Productos</a>
             </li>
             <li>
-                <a href="http://localhost:4000/productsList" class="text-white hover:text-blue-200">Lista Productos</a>
+                <a href="http://localhost:4000/static/realtimecarts" class="text-white hover:text-blue-200">Crear Carts</a>
+            </li>
+            <li>
+                <a href="http://localhost:4000/static/chat" class="text-white hover:text-blue-200">Chat</a>
+            </li>
+            <li>
+                <a href="http://localhost:4000/api/products" class="text-white hover:text-blue-200">API Products</a>
+            </li>
+            <li>
+                <a href="http://localhost:4000/api/carts" class="text-white hover:text-blue-200">API Carts</a>
+            </li>
+            <li>
+                <a href="http://localhost:4000/api/messages" class="text-white hover:text-blue-200">API Messages</a>
             </li>
         </ul>
     </div>
