--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,4 +1,6 @@
-<h1 class="text-3xl font-bold text-gray-800 mb-6">Crear Producto</h1>
+        <header class="p-4 text-black text-center">
+            <h1 class="text-3xl font-bold p-4 bg-white shadow-md">Crear producto</h1>
+        </header>
 <main class="flex justify-center items-center h-screen">
     <form id="formProduct" class="bg-white rounded-lg p-8 w-full max-w-md shadow-lg">
         <div class="mb-6">
