--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,41 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Chat Socket.io</title>
-</head>
-<body class="bg-gray-100 h-screen flex flex-col justify-center items-center">
-
-    <!-- Encabezado del chat -->
-        <header class="p-4 text-black text-center">
-            <h1 class="text-3xl font-bold p-4 bg-white shadow-md">Chat Socket.io</h1>
-        </header>
-
-
-    <!-- Contenedor de mensajes -->
-    <div class="md:w-1/3 p-4 overflow-y-auto">
-        <div class="flex flex-col space-y-2" id="messages">
-            <!-- Mensajes del chat -->
-            {{!-- <div class="bg-blue-200 rounded-lg p-2 self-start max-w-xs">
-                <p class="text-sm">¡Hola! ¿Cómo estás?</p>
-            </div>
-
-            <div class="bg-gray-300 rounded-lg p-2 self-end max-w-xs">
-                <p class="text-sm">¡Hola! Estoy bien, ¿y tú?</p>
-            </div> --}}
-
-            <!-- Agrega más mensajes aquí -->
-        </div>
+<div  class="card text-center">
+    <div class="card-body">
+    <h1 class="card-title">Bienvenidos al chat</h1>
+     <label for="title" class="card-text">Escribí tu mensaje</label>
+    <input id="chat-box" type="text">
+    <button id="botonChat" type="button" class="btn btn-primary">Enviar</button>
     </div>
-
-    <!-- Caja de entrada y botón de enviar -->
-    <div class="md:w-1/3 p-4 bg-white shadow-md">
-        <div class="flex">
-            <input type="text" id="chatBox" placeholder="Escribe un mensaje..." class="flex-1 p-2 rounded-l-lg">
-            <button id="chatButton" class="bg-blue-500 text-white px-4 py-2 rounded-r-lg">Enviar</button>
-        </div>
+    <div class="container-mensajes">
+     <p  class="card-text" id="parrafosMensajes"></p>   
     </div>
-</body>
-</html>
+</div>
