--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,11 +1,13 @@
-<div  class="card text-center">
-    <div class="card-body">
-    <h1 class="card-title">Bienvenidos al chat</h1>
-     <label for="title" class="card-text">Escribí tu mensaje</label>
-    <input id="chat-box" type="text">
-    <button id="botonChat" type="button" class="btn btn-primary">Enviar</button>
+<div class="card bg-white shadow-md rounded-lg">
+    <div class="card-body p-6">
+        <h1 class="text-4xl font-bold mb-4">Bienvenidos al chat</h1>
+        <div class="mb-4">
+            <label for="title" class="block text-lg font-medium mb-2">Escribí tu mensaje</label>
+            <input id="chat-box" type="text" class="w-full p-2 border rounded-md">
+        </div>
+        <button id="botonChat" type="button" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Enviar</button>
     </div>
-    <div class="container-mensajes">
-     <p  class="card-text" id="parrafosMensajes"></p>   
+    <div class="container-mensajes p-6 border-t">
+        <p class="text-lg" id="parrafosMensajes"></p>
     </div>
 </div>
