--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,30 +1,20 @@
-<html lang='es'>{{!  ARCHIVO BASE }}
-	<head>
-		<meta charset='UTF-8' />
-		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
-		<title>Server Nodejs</title>
-    <link rel="stylesheet" href="css/{{rutaCSS}}.css">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.23/dist/sweetalert2.min.css">
-		
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>{{ pageTitle }}</title>
+</head>
+<body class="bg-gray-100 text-gray-800 antialiased">
 
+    {{> header }}
+    {{> sidebar }}
+    <main class="max-w-7xl mx-auto p-4">
+        {{{ body }}}
+    </main>
 
-	</head>
-	<body class="">
-    {{>nav}}
-		{{{body}}}
-		{{! esto es lo que se va a modificar con mis plantilas, va a ir cambiando de acuerdo a qué plantilla quiera mostrar en el body }}
-    {{>footer}}
+    {{> footer }}
 
-    {{!-- nav y footer son partials, se van a repetir --}}
-    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"
-        integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.23/dist/sweetalert2.all.min.js"></script>
-
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="js/{{rutaJS}}.js"></script>
-
-
-
-    </body>
+</body>
 </html>
