--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -3,7 +3,7 @@
     <div class="max-w-6xl mx-auto p-12">
 
         {{#if user}}
-        <h2 class="text-center text-black-900 text-2xl mb-4">Welcome, {{user.fullname}}!</h2>
+        <h2 class="text-center text-black-900 text-2xl mb-4">Welcome, {{user.first_name}}!</h2>
         {{else}}
         <h2 class="text-center text-yellow-500 text-2xl mb-4"></h2>
         {{/if}}
