--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -11,7 +11,7 @@
                 <ul class="hidden lg:flex space-x-8">
                     {{#if user}}
                         <li>
-                            <a href="/users/profile" class="text-gray-700 hover:text-indigo-600">Profile ({{user.fullname}})</a>
+                            <a href="/users/profile" class="text-gray-700 hover:text-indigo-600">Profile ({{user.first_name}})</a>
                         </li>
                         <li>
                             <a href="/users/logout" class="text-gray-700 hover:text-indigo-600">Exit</a>
