--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -12,7 +12,7 @@
                 </h2>
             </div>
         <img src="https://i.pravatar.cc/150?u=a042581f4e29026704d" class="rounded-full w-32 mx-auto" alt="user image">
-        <h2 class="text-2xl font-semibold">Bienvenido {{user.fullname}}</h2>
+        <h2 class="text-2xl font-semibold">Bienvenido {{user.first_name}}</h2>
         <p class="text-gray-600">Tu rol es <span class="font-bold text-black">{{user.role}}</span></p>
         </div>
     </div>
