--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -13,8 +13,12 @@
             </div>
             <form action="/users/register" method="post" class="space-y-4">
                 <div>
-                    <label for="fullname" class="block text-sm font-medium text-gray-600">Nombre Completo</label>
-                    <input type="text" name="fullname" id="fullname" class="mt-1 p-2 w-full border rounded-md" required>
+                    <label for="first_name" class="block text-sm font-medium text-gray-600">Nombre</label>
+                    <input type="text" name="first_name" id="first_name" class="mt-1 p-2 w-full border rounded-md" required>
+                </div>
+                <div>
+                    <label for="last_name" class="block text-sm font-medium text-gray-600">Apellido</label>
+                    <input type="text" name="last_name" id="last_name" class="mt-1 p-2 w-full border rounded-md" required>
                 </div>
                 <div>
                     <label for="age" class="block text-sm font-medium text-gray-600">Edad</label>
