--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="flex items-center justify-center">
-                    <button type="submit" class="w-full p-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
+                    <button type="submit" class="bg-black hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-md">
                         Iniciar Sesión
                     </button>
                 </div>
