--- a/src/views/partials/sidebar.handlebars
+++ b/src/views/partials/sidebar.handlebars
@@ -31,14 +31,14 @@
                 {{else}}
                     <li>
                         <a href="/" class="block py-2 hover:bg-slate-800">
-                            Enlace 1
+                            Home
                         </a>
                     </li>
-                    <li>
+                    {{!-- <li>
                         <a href="/" class="block py-2 hover:bg-slate-800">
                             Enlace 2
                         </a>
-                    </li>
+                    </li> --}}
                 {{/if}}
             </ul>
         </nav>
