--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,6 +1,6 @@
 <header class="bg-white shadow-md fixed top-0 inset-x-0 z-50">
     <nav class="container mx-auto px-6 py-4">
-        <div class="flex items-center justify-end"> <!-- Cambié justify-between a justify-end -->
+        <div class="flex items-center justify-end"> 
 
             <div class="flex items-center">
                 <button class="lg:hidden flex items-center mr-8"> <!-- Agregué un margen derecho para separarlo del menú -->
@@ -18,10 +18,10 @@
                         </li>
                     {{else}}
                         <li>
-                            <a href="/users/login" class="text-gray-700 hover:text-indigo-600">Log In</a>
+                            <a href="/users/login" class="text-gray-700 hover:text-indigo-600">Iniciar Sesión</a>
                         </li>
                         <li>
-                            <a href="/users/register" class="text-gray-700 hover:text-indigo-600">Sign Up</a>
+                            <a href="/users/register" class="text-gray-700 hover:text-indigo-600">Registrar</a>
                         </li>
                     {{/if}}
                 </ul>
